# sdk-nrf

./: CODEOWNERS
samples/crypto/psa_tls/: CMakeLists.txt
samples/crypto/psa_tls/include/: certificate.h  psa_tls_credentials.h  psa_tls_functions.h
samples/crypto/psa_tls/overlays/: cc3xx-oberon-psa.conf  cracen-psa.conf
samples/crypto/psa_tls/src/: main.c  psa_dtls_functions_client.c  psa_dtls_functions_server.c  psa_tls_functions_client.c  psa_tls_functions_server.c
samples/crypto/psa_tls/src/non-secure/: psa_tls_credentials_client.c  psa_tls_credentials_server.c
samples/crypto/secure_storage/: CMakeLists.txt  main_bck
samples/crypto/secure_storage/boards/: nrf54l15dk_nrf54l15_cpuapp.conf
samples/crypto/secure_storage/src/: main.c
samples/keys/identity_key_generation/: sample.yaml
samples/keys/identity_key_usage/: sample.yaml
samples/tfm/tfm_hello_world/: sample.yaml
samples/zephyr/tfm_integration/psa_protected_storage/: CMakeLists.txt  sample.yaml
samples/zephyr/tfm_integration/tfm_ipc/: CMakeLists.txt  sample.yaml
samples/zephyr/tfm_integration/tfm_secure_partition/: CMakeLists.txt  sample.yaml
scripts/: quarantine_integration.yaml  quarantine_zephyr_integration.yaml
subsys/nrf_security/: Kconfig.tls
subsys/nrf_security/cmake/: nrf_config.cmake
subsys/nrf_security/configs/: nrf-config.h.template
tests/tfm/tfm_psa_test/: testcase.yaml
tests/tfm/tfm_regression_test/: testcase.yaml
tests/tfm/tfm_regression_test/boards/: nrf54lm20dk_nrf54lm20a_cpuapp_ns.conf  nrf54lm20dk_nrf54lm20b_cpuapp_ns.conf
(+2 files in other folders)
